--- a/presenter/src/locales/en.json
+++ b/presenter/src/locales/en.json
@@ -1,28 +1,7 @@
 {
   "about": {
-    "h1": "About",
-    "link1": "github.com",
-    "link2": "website",
-    "text1": "To find out more about this boilerplate you can look at the sources on {link}.",
-    "text2": "Want to get in touch? Find out how on our {link}."
-  },
-  "app": {
-    "inc": {
-      "h1": "Increase the Counter",
-      "menu": "Increase",
-      "text": "Increase: {count}"
-    },
-    "reset": {
-      "h1": "Reset the Counter",
-      "menu": "Reset",
-      "text": "Reset: {count}"
-    },
-    "value": {
-      "h1": "The Counter",
-      "menu": "Value",
-      "text": "The current value of the counter is: {count}"
-    }
-  },
+   
+  },  
   "error": {
     "404": {
       "h1": "404 Page Not Found",
@@ -33,23 +12,13 @@
       "text": "Something went wrong."
     }
   },
-  "home": {
-    "greet1": "Sincerly",
-    "greet2": "Your IT Team For Change",
-    "h1": "IT4C Frontend Boilerplate",
-    "text1": "Welcome to this minimal starter for frontends.",
-    "text2": "This is just a basic example to demonstrate things - nothing fancy.",
-    "text3": "In the App Section you will find a counter example utilizing the local storage.",
-    "text4": "Happy Coding",
+  "home": {    
     "section1":{
       "headline": "DreamMall created by people for people",
       "subHeadline": "7 Days free trial",
       "preOrderBtn": "PRE ORDER"
     }
-  },
-  "language": {
-    "german": "German"
-  },
+  },  
   "menu": {
     "about": "about",
     "products": "products",
@@ -66,6 +35,10 @@
       "sitemap": "Sitemap",
       "contact": "Contact",
       "newsletter": "Join our Newsletter"
+    },
+    "footer":{
+      "textInputLabel": "E-Mail Address",
+      "textInputButton": "Submit"
     }
   }
 }
