fix instagram locales

--- a/presenter/src/locales/de.json
+++ b/presenter/src/locales/de.json
@@ -41,7 +41,7 @@
     },
     "home": "Home",
     "humanAndProjects": "Human and Projects",
-    "instagramm": "Instagramm",
+    "instagram": "Instagram",
     "linkedIn": "LinkedIn",
     "mall": "Mall",
     "products": "products",
