change humansAndProjects locale

--- a/presenter/src/locales/de.json
+++ b/presenter/src/locales/de.json
@@ -40,7 +40,7 @@
       "sitemap": "Sitemap"
     },
     "home": "Start",
-    "humanAndProjects": "Mensch und Projekte",
+    "humansAndProjects": "Menschen und Projekte",
     "instagram": "Instagram",
     "linkedIn": "LinkedIn",
     "mall": "Mall",
