--- a/presenter/src/locales/en.json
+++ b/presenter/src/locales/en.json
@@ -40,7 +40,7 @@
       "sitemap": "Sitemap"
     },
     "home": "Home",
-    "humanAndProjects": "Human and Projects",
+    "humansAndProjects": "Humasn and Projects",
     "instagram": "Instagram",
     "linkedIn": "LinkedIn",
     "mall": "Mall",
