correct German word

--- a/presenter/src/locales/de.json
+++ b/presenter/src/locales/de.json
@@ -46,6 +46,6 @@
     "mall": "Mall",
     "products": "produkte",
     "twitter": "X",
-    "worldCoffeeHouse": "Weltcafé"
+    "worldCoffeeHouse": "Weltencafé"
   }
 }
