--- a/presenter/src/locales/en.json
+++ b/presenter/src/locales/en.json
@@ -17,13 +17,25 @@
       "subHeadline": "7 Days free trial"
     },
     "section2": {
-      "headline": "About Section Content"
+      "buttonTxt": "Persönlicher Kontakt",
+      "contentFirstParagraph": "Die DreamMall Plattform bietet Euch Unternehmern, Unternehmergruppen sowie Jungunternehmern/Startups einen vertrauensvollen Raum der kreativen Vernetzung für Eure Ideen und Projekte.",
+      "contentSecondParagraph": "Wir verwirklichen uns jetzt alle. Die DreamMall entwickelt sich mit jedem Einzelnen von uns für ein gemeinsames Wirtschaften und einer guten Lebensqualität. Unsere positive Energie vervielfältigt sich und gemeinsam blicken wir nur noch nach vorne. Weltweit!",
+      "headline": "Respektvolles Miteinander macht ALLES möglich."
     },
     "section3": {
       "headline": "Products Section Content"
     },
     "section4": {
       "headline": "Contact Section Content"
+    },
+    "section5": {
+      "headline": "Kontakt"
+    },
+    "section6": {
+      "buttonText": "weiter",
+      "content": "Seien Sie Teil des Anfangs einer aufregenden Veränderung! Hinterlassen Sie uns einfach Ihren Namen und Ihre E-Mail-Adresse, um exklusive Angebote und umfassende Details vor der offiziellen Veröffentlichung zu erhalten. Verpassen Sie nicht die Gelegenheit, Teil unserer einzigartigen Community zu werden und von unseren besonderen Starter-Angeboten zu profitieren!",
+      "headline": "Veränderung",
+      "headlineAppend": "Schaffen"
     }
   },
   "menu": {
