[feat] updated first section with caroussel and video

--- a/presenter/src/locales/de.json
+++ b/presenter/src/locales/de.json
@@ -13,7 +13,7 @@
   "home": {
     "section1": {
       "headline": "DreamMall von Menschen für Menschen geschaffen",
-      "preOrderBtn": "VORBESTELLUNG",
+      "preOrderBtn": "Mehr Informationen",
       "subHeadline": "7 Tage kostenlos testen"
     },
     "section2": {
