--- a/presenter/src/locales/en.json
+++ b/presenter/src/locales/en.json
@@ -13,7 +13,7 @@
   "home": {
     "section1": {
       "headline": "DreamMall created by people for people",
-      "preOrderBtn": "PRE ORDER",
+      "preOrderBtn": "Mehr Informationen",
       "subHeadline": "7 Days free trial"
     },
     "section2": {
