--- a/presenter/src/locales/de.json
+++ b/presenter/src/locales/de.json
@@ -41,6 +41,22 @@
     "section4": {
       "headline": "Kontakt"
     },
+    "section5": {
+      "headline": "Deine Zutaten",
+      "headlineAppend": "im Kaffee",
+      "slide1": {
+        "headline": "Alle Funktionen die du brauchst.",
+        "subheadline": "Weltencafé"
+      },
+      "slide2": {
+        "headline": "Digitale Vielfalt",
+        "subheadline": "Mall"
+      },
+      "slide3": {
+        "headline": "Digitale Vielfalt",
+        "subheadline": "Menschen und Projekte"
+      }
+    },
     "section6": {
       "buttonText": "weiter",
       "content": "Seien Sie Teil des Anfangs einer aufregenden Veränderung! Hinterlassen Sie uns einfach Ihren Namen und Ihre E-Mail-Adresse, um exklusive Angebote und umfassende Details vor der offiziellen Veröffentlichung zu erhalten. Verpassen Sie nicht die Gelegenheit, Teil unserer einzigartigen Community zu werden und von unseren besonderen Starter-Angeboten zu profitieren!",
