--- a/presenter/src/locales/de.json
+++ b/presenter/src/locales/de.json
@@ -39,7 +39,8 @@
       }
     },
     "section4": {
-      "headline": "Kontakt"
+      "headline": "DreamMall Planning",
+      "timelineBtn": "Reload"
     },
     "section5": {
       "headline": "Deine Zutaten",
