--- a/presenter/src/locales/de.json
+++ b/presenter/src/locales/de.json
@@ -93,7 +93,7 @@
         "subheadline": "Mall"
       },
       "slide3": {
-        "headline": "Digitale Vielfalt",
+        "headline": "Erfolgreiche Projekte suchen Talente, Ressourcen und Arbeit.",
         "subheadline": "Menschen und Projekte"
       }
     },
