--- a/presenter/src/locales/en.json
+++ b/presenter/src/locales/en.json
@@ -42,7 +42,6 @@
       "newsletterDownloadBtn": "Download",
       "newsletterForm": {
         "email": "E-Mail Adresse",
-        "fieldRequired": "Dieses Feld wird benötigt",
         "firstname": "Vorname",
         "privacy": "Ich stimme der Speicherung der Daten zur Verarbeitung im Sinne der DSGVO zu. Weitere Informationen findest du in unserer",
         "privacyLinkLabel": "Datenschutzrichtlinie",
@@ -161,9 +160,6 @@
     "footer": {
       "contact": "Kontaktiere uns",
       "contactForm": {
-        "fieldNoEmail": "Dieses Feld muss eine Email-Adresse sein",
-        "fieldRequired": "Dieses Feld wird benötigt",
-        "fieldTooLong": "Dieses Feld ist zu lang",
         "firstName": "Vorname",
         "lastName": "Nachname",
         "mail": "E-Mail Adresse",
@@ -193,5 +189,10 @@
       "products": "products",
       "sitemap": "Sitemap"
     }
+  },
+  "validation": {
+    "fieldNoEmail": "Dieses Feld muss eine Email-Adresse sein",
+    "fieldRequired": "Dieses Feld wird benötigt",
+    "fieldTooLong": "Dieses Feld ist zu lang"
   }
 }
