updated footer links

--- a/presenter/src/locales/en.json
+++ b/presenter/src/locales/en.json
@@ -181,6 +181,7 @@
       "instagram": "Instagram",
       "mall": "Mall",
       "newsletter": "Newsletter",
+      "planing": "DreamMall Planning",
       "privacy": "Datenschutzrichtlinien",
       "privacyHeadline": "Datenschutz",
       "sitemap": "Sitemap",
