--- a/presenter/src/locales/de.json
+++ b/presenter/src/locales/de.json
@@ -181,12 +181,13 @@
       "instagram": "Instagram",
       "mall": "Mall",
       "newsletter": "Newsletter",
+      "planing": "DreamMall Planning",
       "privacy": "Datenschutzrichtlinien",
       "privacyHeadline": "Datenschutz",
       "sitemap": "Sitemap",
       "socialHeadline": "Social Media",
       "telegram": "Telegram",
-      "worldCoffeeHouse": "World Coffee House"
+      "worldCoffeeHouse": "Weltencafé"
     },
     "header": {
       "about": "über",
