--- a/presenter/src/locales/de.json
+++ b/presenter/src/locales/de.json
@@ -76,7 +76,7 @@
       },
       "thirdColumn": {
         "headline": "Menschen und Projekte",
-        "text": "Dein Talent ist wichtig für die Welt. Verwirkliche deine Kreativität in der Realität."
+        "text": "Dein Talent ist wichtig für die Welt. Verwirkliche deine Kreativität in die Realität."
       }
     },
     "section4": {
