--- a/presenter/src/locales/en.json
+++ b/presenter/src/locales/en.json
@@ -201,8 +201,8 @@
   },
   "optin": {
     "error": {
-      "text": "Bei der Bestätigung ist ein Fehler aufgetreten. Bitte trage dich erneut in den Newsletter ein.",
-      "link": "Erneut eintragen"
+      "link": "Erneut eintragen",
+      "text": "Bei der Bestätigung ist ein Fehler aufgetreten. Bitte trage dich erneut in den Newsletter ein."
     },
     "success": {
       "text": "Du hast dein Newsletterabbonoment erfolgreich bestätigt. Du wirst in Kürze auf die Startseite weitergeleitet."
