--- a/presenter/src/locales/en.json
+++ b/presenter/src/locales/en.json
@@ -79,7 +79,7 @@
         "text": "Dein Talent ist wichtig für die Welt. Verwirkliche deine Kreativität in die Realität."
       }
     },
-    "section4": {
+    "planningSection": {
       "headline": "DreamMall Planning",
       "timelineBtn": "Reload"
     },
