--- a/presenter/src/locales/de.json
+++ b/presenter/src/locales/de.json
@@ -52,7 +52,7 @@
       },
       "subHeadline": "Immer auf dem Laufenden bleiben"
     },
-    "section1": {
+    "introSection": {
       "headline": "DreamMall von Menschen für Menschen geschaffen",
       "preOrderBtn": "Mehr Informationen",
       "subHeadline": "7 Tage kostenlos testen"
