--- a/presenter/src/locales/en.json
+++ b/presenter/src/locales/en.json
@@ -99,7 +99,7 @@
         "subheadline": "Menschen und Projekte"
       }
     },
-    "section6": {
+    "ctaSection": {
       "buttonText": "weiter",
       "content": "Seien Sie Teil des Anfangs einer aufregenden Veränderung! Hinterlassen Sie uns einfach Ihren Namen und Ihre E-Mail Adresse, um exklusive Angebote und umfassende Details vor der offiziellen Veröffentlichung zu erhalten. Verpassen Sie nicht die Gelegenheit, Teil unserer einzigartigen Community zu werden und von unseren besonderen Starter-Angeboten zu profitieren!",
       "headline": "Veränderung",
