feat(presenter): rename products to produkte

--- a/presenter/src/locales/de.json
+++ b/presenter/src/locales/de.json
@@ -195,7 +195,7 @@
       "about": "über",
       "contact": "kontakt",
       "newsletter": "Newsletter abonnieren",
-      "products": "products",
+      "products": "produkte",
       "sitemap": "Sitemap"
     }
   },
